# tiewtrade

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  PRODUCT.md  PROJECT_PLAN.md  README.md  package-lock.json  pyproject.toml
config/: app.example.toml
docs/: architecture.md  commands.md  database.md  product-decisions.md  project-overview.md  screen-list.md  status.md  task-breakdown.md  task-report.md  user-flow.md
docs-site/: README.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json
docs-site/app/: layout.tsx  not-found.tsx
docs-site/content/: _meta.ts  architecture.mdx  basket-lifecycle.mdx  capital-allocation.mdx  decisions.mdx  delivery.mdx  domain.mdx  entry-pair-cooldown.mdx  index.mdx  live-safety.mdx  paper-trading.mdx  product.mdx  recovery.mdx  strategy.mdx  trading-process.mdx  work-plan.mdx
docs-site/scripts/: check-content.mjs  check-source-references.mjs
docs-site/tests/: documentation.test.mjs  planning.test.mjs  source-references.test.mjs
docs/agents/: explain-code.md  implement.md  plan.md  refactor.md  review.md  security.md  task-complete.md  test.md
docs/completion/: task-complete-task-001-project-foundation.md  task-complete-task-002-license-module.md
docs/explanations/: explain-task-001-project-foundation.md
docs/reviews/: agent-workflow-standardization.md  architecture-10-10-update.md  architecture-consistency-review.md  commands-update.md  refactor-task-001-project-foundation.md  review-task-001-project-foundation.md  security-task-001-project-foundation.md  (+1 more)
tests/: test_foundation.py
(+69 files in other folders)
