[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiewtrade"
version = "0.1.0"
description = "Desktop trading bot foundation for Binance Spot and Futures"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8",
    "binance-connector>=3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]

[project.scripts]
tiewtrade = "tiewtrade.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
