[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiewtrade"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tiewtrade"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["tiewtrade"]
